--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #222;
+  color: white;
 }
 
 .App-logo {
@@ -8,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: hsla(0, 0%, 13%, 0.326);
   height: 150px;
   padding: 20px;
   color: white;
